--- a/Frontend/results.html
+++ b/Frontend/results.html
@@ -52,6 +52,14 @@
           <p id="questions-empty" class="muted" hidden>No additional questions.</p>
         </section>
 
+        <hr class="divider" />
+
+        <section aria-labelledby="sources-h" class="section-spaced">
+          <h3 id="sources-h" class="section-subheading">Sources</h3>
+          <ul id="sources-list" class="bulleted"></ul>
+          <p id="sources-empty" class="muted" hidden>No sources found.</p>
+        </section>
+
         <div class="actions">
           <a class="btn" href="index.html" role="button" aria-label="Restart">Restart</a>
         </div>
