--- a/Frontend/loading.html
+++ b/Frontend/loading.html
@@ -200,9 +200,12 @@
     <main class="main">
       <div class="container">
         <section id="videoWrap">
-          <video id="loadingVideo" autoplay muted playsinline controls style="display: none;"></video>
-          <div id="videoPlaceholder" class="video-placeholder" style="display: none;">
-            No Video Provided
+          <h2 class="section-heading" style="text-align: center; margin-bottom: 1.5rem;">🔎 Searching Public Records on County Websites</h2>
+          <div style="text-align: center;">
+            <video id="loadingVideo" autoplay muted playsinline controls style="display: none;"></video>
+            <div id="videoPlaceholder" class="video-placeholder" style="display: none;">
+              No Video Provided
+            </div>
           </div>
         </section>
 
